First Draft Portfolio

--- a/_config.yml
+++ b/_config.yml
@@ -1,46 +1,24 @@
-url: https://y7kim.github.io
-baseurl: /agency-jekyll-theme/
+url: https://xavierosee.github.io
+baseurl:
 
 # Site settings
-title: Awesome Title
-email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+title: Xavier Rosée
+email: xavier@xavierrosee.com
+description: "Xavier Rosée is a Video Game Marketing professional that provides Strategy and Branding consultancy, along with User Acquisition services for PC and Mobile Games. My range of services cater to everyone from AAA studios to solo indie developers."
 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Xavier Rosée
   pic: 1
-  position: Lead Designer
+  position: Marketing Consultant
   social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
-
-- name: Larry Parker
-  pic: 2
-  position: Lead Marketer
-  social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
     - title: linkedin
-      url: #
-
-- name: Diana Petersen
-  pic: 3
-  position: Lead Developer
-  social:
+      url: https://linkedin.com/in/xavierosee
     - title: twitter
-      url: #
+      url: https://twitter.com/xavierosee
     - title: facebook
-      url: #
-    - title: google-plus
-      url: #
+      url: https://facebook.com/xavierosee
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -50,15 +28,15 @@ social:
     url:
   - title: stack-overflow
     url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
+  - title: bitbucket
     url: http://bitbucket.org/jekyll
   - title: github
     url: http://github.com/jekyll
 
 # Postal address (add as many lines as necessary)
-address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+#address:
+#  - line: 3481 Melrose Place
+#  - line: Beverly Hills, CA 90210
 
 # Build settings
 markdown: kramdown
