--- a/_config.yml
+++ b/_config.yml
@@ -22,16 +22,12 @@ people:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
+  - title: linkedin
+    url: http://linkedin.com/in/xavierosee
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: http://twitter.com/xavierosee
   - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
-  - title: github
-    url: http://github.com/jekyll
+    url: http://facebook.com/xavierosee
 
 # Postal address (add as many lines as necessary)
 #address:
