fixing typos and HTTPS

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ baseurl:
 # Site settings
 title: Xavier Rosée
 email: xavier@xavierrosee.com
-description: "Xavier Rosée is a Video Game Marketing professional that provides Strategy and Branding consultancy, along with User Acquisition services for PC and Mobile Games. My range of services cater to everyone from AAA studios to solo indie developers."
+description: "Xavier Rosée is a Video Game Marketing professional that provides Strategy and Branding consultancy, along with User Acquisition services for PC and Mobile Games. His range of services caters to everyone from AAA studios to solo indie developers."
 
 
 # Team names, titles and social links
