--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-url: https://xavierosee.github.io
+url: https://offtheground.io
 baseurl:
 
 # Site settings
 title: Xavier Rosée
 email: xavier@xavierrosee.com
 description: "Xavier Rosée is a Video Game Marketing professional that provides Strategy and Branding consultancy, along with User Acquisition services for PC and Mobile Games. His range of services caters to everyone from AAA studios to solo indie developers."
+image: img/mainpicture.jpg
 
 
 # Team names, titles and social links
