--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,9 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: 53C0CC
-  secondary: 1F4F58   
+  primary: E887B2
+  backup-primary: 53C0CC
+  secondary: 96409B
+  backup-secondary: 1F4F58
   secondary-dark: 333
   muted: 777
 
