--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email: contact@offtheground.io
 description: "Xavier Rosée is a certified Video Game Marketing professional that provides Strategy and Branding consultancy, along with User Acquisition services for PC and Mobile Games. His range of services caters to everyone from AAA studios to solo indie developers."
 image: img/mainpicture.jpg
 largeimage: img/largepicture.jpg
-logo: img/logo-white-small.png
+logo: https://offtheground.io/img/logo-white-small.png
 
 
 # Team names, titles and social links
