--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ email: contact@offtheground.io
 description: "Off The Ground is a multiple-certified Mobile Marketing consultancy that provides Strategy and Branding consultancy, along with User Acquisition services for Mobile Apps and Games. Our range of services caters to everyone from AAA studios to solo indie developers."
 image: img/mainpicture.jpg
 largeimage: img/largepicture.jpg
-logo: img/otg-logo.png
+logo: img/otg-logo-white.png
 
 
 # Team names, titles and social links
